<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/bottom_sheet_limit_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/mainCL" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0">
        <com.airbnb.lottie.LottieAnimationView android:layout_width="150dp" android:layout_height="150dp" android:layout_marginTop="34dp" android:layout_marginBottom="16sp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:lottie_autoPlay="true" app:lottie_loop="false" app:lottie_rawRes="@raw/buy"/>
        <TextView android:textSize="19sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/titleTV" android:paddingTop="6dp" android:paddingBottom="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/daily_limit_title" android:paddingStart="16dp" android:paddingEnd="16sp"/>
        <TextView android:textSize="18sp" android:textColor="@color/white" android:id="@+id/descTV" android:paddingTop="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dp" android:text="@string/daily_limit_desc" android:textAlignment="center" android:paddingStart="16dp" android:paddingEnd="16sp"/>
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:id="@+id/yesBTN" android:background="@drawable/shape_round" android:padding="15sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:layout_marginBottom="36dp" android:text="@string/get_pro" android:textAllCaps="true" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="8dp" android:backgroundTint="@color/colorAccent2" android:letterSpacing="0.1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/infoLL"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
