<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/mainCL" android:tag="layout/activity_main_0" android:background="@drawable/gradient_main" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.4"/>
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline4" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.6"/>
    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/firstIV" android:tag="binding_1" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" android:src="@drawable/ic_user_default_gray" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:civ_border_color="@color/whitesmoke" app:civ_border_width="4dp" app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
    <TextView android:textSize="16sp" android:textColor="@color/black" android:id="@+id/textView2" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/first_image" android:textAlignment="center" app:layout_constraintBottom_toBottomOf="@+id/firstIV" app:layout_constraintEnd_toEndOf="@+id/firstIV" app:layout_constraintStart_toStartOf="@+id/firstIV" app:layout_constraintTop_toTopOf="@+id/firstIV"/>
    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/secondIV" android:tag="binding_2" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="8dp" android:layout_marginBottom="16dp" android:src="@drawable/ic_user_default_gray" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:civ_border_color="@color/whitesmoke" app:civ_border_width="4dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/guideline4" app:layout_constraintVertical_bias="1"/>
    <TextView android:textSize="16sp" android:textColor="@color/black" android:id="@+id/textView3" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/second_image" android:textAlignment="center" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="@+id/secondIV" app:layout_constraintStart_toStartOf="@+id/secondIV" app:layout_constraintTop_toTopOf="@+id/secondIV"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@+id/constraintLayout" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/guideline2">
        <TextView android:textSize="15sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:id="@+id/compareBTN" android:tag="binding_3" android:background="@drawable/shape_round" android:padding="15sp" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/compare" android:textAllCaps="true" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:elevation="8dp" android:letterSpacing="0.1" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@+id/textView5" android:tag="binding_4" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/refresh" android:drawablePadding="8dp" android:drawableStart="@drawable/ic_baseline_refresh_24" android:textAlignment="center" android:paddingStart="8dp" android:paddingEnd="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
        <androidx.cardview.widget.CardView android:id="@+id/similarityViewCV" android:visibility="gone" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:shape="ring" android:innerRadius="0dp" android:layout_marginStart="4dp" android:layout_marginEnd="4dp" android:translationZ="6dp" android:elevation="0dp" app:cardCornerRadius="8dp" app:cardElevation="6dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintDimensionRatio="h,1:1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <ImageView android:id="@+id/imageView2" android:tag="binding_5" android:background="?attr/selectableItemBackground" android:padding="12dp" android:layout_width="50dp" android:layout_height="50dp" android:contentDescription="@null" app:layout_constraintBottom_toBottomOf="@+id/similarityScoreTV" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toEndOf="@+id/similarityScoreTV" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0" app:srcCompat="@drawable/ic_baseline_refresh_24" app:tint="@color/colorPrimary"/>
                <ImageView android:id="@+id/imageView3" android:tag="binding_6" android:background="?attr/selectableItemBackground" android:padding="12dp" android:layout_width="50dp" android:layout_height="50dp" android:contentDescription="@null" app:layout_constraintBottom_toBottomOf="@+id/similarityScoreTV" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toStartOf="@+id/similarityScoreTV" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0" app:srcCompat="@drawable/ic_outline_info_24" app:tint="@color/colorPrimary"/>
                <TextView android:textSize="78sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:id="@+id/similarityScoreTV" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/orbitron" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
                <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/colorPrimaryDark" android:gravity="center" android:id="@+id/similarityTV" android:visibility="invisible" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="48dp" android:fontFamily="@font/orbitron" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/similarityScoreTV"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/selectionCL" android:tag="binding_7" android:background="@drawable/gradient_selection" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <include android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/includeActionMenu" android:paddingBottom="32dp" android:visibility="invisible" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" layout="@layout/include_menu_main"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/loadingCL" android:background="@color/semitransparent" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline3" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.6"/>
        <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@+id/guideline8" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.4"/>
        <com.airbnb.lottie.LottieAnimationView android:id="@+id/lottieAnimationView" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintBottom_toTopOf="@+id/guideline8" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/face_recognition"/>
        <com.airbnb.lottie.LottieAnimationView android:id="@+id/lottieAnimationView2" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="8dp" android:layout_marginBottom="16dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/guideline3" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/face_recognition"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
